<resources>
    <string name="app_name">Управление вывозами</string>

    <string name="connectionPref">Настройки подключения</string>
    <string name="commonPref">Общие настройки</string>
    <string name="servicePref">Сервисные функции</string>

    <string name="settingsLable">Настройки</string>
    <string name="serverAddress">Имя/адрес сервера</string>
    <string name="PortText">Порт</string>
    <string name="passText">Пароль</string>
    <string name="URLName_Description">имя сервера для получения данных</string>
    <string name="UrlPort_Description">порт сервера для подключения</string>
    <string name="UrlAuthPass_Description">Пароль для подключения к серверу</string>
    <string name="routePref">Маршрут</string>
    <string name="routePref_Description">Выбранный маршрут</string>
    <string name="routeTitle">Маршрут</string>
    <string name="regionTitle">Регион</string>
    <string name="vehicleNumberTitle">ТС</string>
    <string name="datePrefTitle">Дата</string>
    <string name="sendLog">Отправить отчет об ошибке</string>
    <string name="updateApp">Обновить приложение</string>
    <string name="update">Обновить</string>
    <string name="home">Главная</string>
    <string name="list">Список</string>
    <string name="photos">Фото</string>
    <string name="settings">Настройки</string>
    <string name="searchTitle">Поиск</string>
    <string name="addupdateroute">Добавить/Изменить</string>
    <string name="pointsAtAll_title">Точек всего</string>
    <string name="all_title">Всего</string>
    <string name="done_title">Выполнено</string>
    <string name="confirm_title">Готово</string>
    <string name="closeRoute">Закрыть маршрут</string>
    <string name="openClose">Показать/Скрыть</string>
    <string name="vehicle_long_title">Транспортое средство</string>
    <string name="region_title">Регион</string>
    <string name="vehicle_shorttitle">ТС</string>
    <string name="vehicle_title">Транспортное средство</string>
    <string name="date_title">Дата</string>
    <string name="on_call_title">По заявке</string>
    <string name="pointStatusDescription">Статус выполнения точки</string>
    <string name="show_full_list_title">Показывать полный список</string>
    <string name="photo_before_title">Фото до</string>
    <string name="set_countfact_title">Установить факт</string>
    <string name="photo_after_title">Фото после</string>
    <string name="switch_camera_button_alt">Переключить камеру</string>
    <string name="capture_button_alt">Фото</string>
    <string name="picture_cancel">ПОВТОР</string>
    <string name="picture_confirm">ОК</string>
    <string name="ok">ОК</string>
    <string name="send_files">Отправить</string>
    <string name="share_button_alt">Поделиться</string>
    <string name="back_button_alt">Назад</string>
    <string name="share_hint">Поделиться</string>
    <string name="clearCacheFiles">Очистить кеш</string>
    <string name="clearCache">Очистить кеш</string>
    <string name="title_activity_error">ErrorActivity</string>
    <string name="crash">Авария!</string>
    <string name="restart_title">Перезагрузить</string>
    <string name="photo_title">ФОТО</string>
    <string name="restartWorkManager">Перезапустить фоновые задания</string>
    <string name="notification_title">Отслеживание местоположения</string>
    <string name="notification_message">Включено отслеживание местоположения</string>
    <string name="ticker_text">Местоположение</string>
    <string name="application_not_found">Требуемое приложение не обнаружено</string>
    <string name="reasonInputHint">Введите причину невозможности вывоза</string>
    <string name="defaultFactText">0.0</string>
    <string name="containerTitle">Контейнер</string>
    <string name="doneTitle">done</string>
    <string name="loadingInProcess">Идет выгрузка данных…</string>
    <string name="beforeTitle">before</string>
    <string name="choose_polygon">Выберите полигон</string>
    <string name="polygon">Полигон</string>
    <string name="polygon_trip">Свалка</string>
    <string name="add_polygon">Добавить полигон</string>
    <string name="points_list">Задание</string>
    <string name="point_completion">Выполнение точки</string>
    <string name="polygons">Полигоны</string>
    <string name="Photo_gallery">Просмотр фотографий</string>
    <string name="route_settings">Настройки ТС</string>
    <string name="regions">Регионы</string>
    <string name="vehicles">Транспортные средства</string>
    <string name="routes_title">Маршруты</string>
    <string name="showall_title">Показать все</string>
    <string name="make_picture_after">Сделать фото после</string>
    <string name="fullList">Полный список</string>
    <string name="permission_title">Разрешения</string>
    <string name="text_point_can_be_done">Вывоз возможен</string>
    <string name="text_point_cannot_be_done">Вывоз невозможен</string>
    <string name="yes">Да</string>
    <string name="notification_channel_id">1001</string>
    <string name="uploading_result">Выгрузка задания</string>
    <string name="cancel">Отменить</string>
    <string name="UploadAwaiting">Ожидание выгрузки</string>
    <string name="defects_title">Информация для линейного механика</string>
    <string name="defects_description">Опишите неполадки в работе ТС</string>
    <string name="defects_cancel">ОТМЕНА</string>
    <string name="defects_confirm">ОК</string>

</resources>