<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.routesettings.RouteSettingsFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_title,tv_region,tv_vehicle,tv_date" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small16"
        android:padding="@dimen/margin_small16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/text_size_title"
        android:textColor="@android:color/black"
        android:text="@string/settings">

    </TextView>

    <TextView
        android:id="@+id/tv_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small16"
        android:padding="@dimen/margin_small16"
        android:background="@drawable/bg_round_rect_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:hint="@string/region_title">

    </TextView>

    <TextView
        android:id="@+id/tv_vehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small16"
        android:padding="@dimen/margin_small16"
        android:background="@drawable/bg_round_rect_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_region"
        android:hint="@string/vehicle_title">

    </TextView>

    <TextView
        android:id="@+id/tv_route"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small16"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_rect_white"
        android:hint="@string/routeTitle"
        android:padding="@dimen/margin_small16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_vehicle"
        tools:visibility="visible">

    </TextView>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small16"
        android:padding="@dimen/margin_small16"
        android:background="@drawable/bg_round_rect_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_route"
        android:hint="@string/date_title">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>